<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group>
        <item
            android:id="@+id/action_fragment_add"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="1"
            android:showAsAction="always|withText"
            android:title="@string/str_fragment_add"/>
        <item
            android:id="@+id/action_fragment_del"
            android:showAsAction="never"
            android:title="@string/str_fragment_del"/>
        <item
            android:id="@+id/action_fragment_mod"
            android:showAsAction="never"
            android:title="@string/str_fragment_mod"/>
    </group>

    <item
        android:id="@+id/action_fragment_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/str_1"/>
    <item
        android:id="@+id/action_fragment_next"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/str_fragment_next"/>
    <item
        android:id="@+id/action_fragment_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>